--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "homepage": "https://anindacyntia.github.io/Web3AP-anindacyntia/",
+  "homepage": "https://anindacyntia.github.io/kopishop/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
